--- a/src/gardener/Views/BlocksViews/NewsViewCell.xaml
+++ b/src/gardener/Views/BlocksViews/NewsViewCell.xaml
@@ -5,7 +5,7 @@
           xmlns:forms="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
           x:Class="gardener.Views.BlocksViews.NewsViewCell">
     <ViewCell.View>
-        <Grid>
+        <Grid Margin="0,15,0,15">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="100"/>
                 <ColumnDefinition/>
