--- a/src/gardener/Views/BlocksViews/NewsViewCell.xaml
+++ b/src/gardener/Views/BlocksViews/NewsViewCell.xaml
@@ -5,24 +5,26 @@
           xmlns:forms="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
           x:Class="gardener.Views.BlocksViews.NewsViewCell">
     <ViewCell.View>
-        <Grid Margin="0,15,0,15">
+        <StackLayout Orientation="Horizontal" Margin="0,5,0,5">
+            <StackLayout Margin="10,0,10,0">
+                <StackLayout VerticalOptions="CenterAndExpand" BackgroundColor="#f68b1f" Padding="1">
+                    <forms:CachedImage Aspect="AspectFill" VerticalOptions="Center"
+                                       ErrorPlaceholder="no_image"
+                                       LoadingPlaceholder="no_image"
+                                       Source="{Binding ImageUrl}" WidthRequest="100" HorizontalOptions="Start"/>
+                </StackLayout>
+            </StackLayout>
+            <Label Text="{Binding Title}" Margin="10, 0" FontSize="Medium" TextColor="#9e4819"
+                       VerticalTextAlignment="Center" HorizontalTextAlignment="Start" />
+        </StackLayout>
+        <!--<Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="100"/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <StackLayout Grid.Row="0" Grid.Column="0" Margin="10,0,10,0">
-                <StackLayout VerticalOptions="CenterAndExpand" BackgroundColor="#f68b1f" Padding="1">
-                    <forms:CachedImage Aspect="AspectFill" VerticalOptions="Center"
-                                       ErrorPlaceholder="no_image"
-                                       LoadingPlaceholder="no_image"
-                                       Source="{Binding ImageUrl}" />
-                </StackLayout>
-            </StackLayout>
-            <Label Grid.Row="0" Grid.Column="1" Text="{Binding Title}" Margin="10, 0" FontSize="Medium" TextColor="#9e4819"
-                       VerticalTextAlignment="Center" HorizontalTextAlignment="Start" />
-        </Grid>
+        </Grid>-->
     </ViewCell.View>
 </ViewCell>
