--- a/src/gardener/Views/ListView/FormAppBuyPage.xaml
+++ b/src/gardener/Views/ListView/FormAppBuyPage.xaml
@@ -22,11 +22,27 @@
                         </gardener:ExtendedEntry.Behaviors>
                     </gardener:ExtendedEntry>
 
+                    <!--
                     <Label Text="{Binding PlaceName, Mode=OneWay}" FontSize="Large" Margin="0,10,0,10">
                         <Label.GestureRecognizers>
                             <TapGestureRecognizer Command="{Binding OpenPlacePopUpCommand}"/>
                         </Label.GestureRecognizers>
                     </Label>
+                    -->
+
+                    <gardener:ExtendedEntry Placeholder="{Binding RowTitle}" 
+                                            FontSize="Large" 
+                                            TextColor="#9e4819"
+                                            PlaceholderColor="#7a7a7a"
+                                            HorizontalOptions="Fill"
+                                            Text="{Binding OldEntryRow, Mode=TwoWay}" />
+
+                    <gardener:ExtendedEntry Placeholder="{Binding PlaceTitle}" 
+                                            FontSize="Large" 
+                                            TextColor="#9e4819"
+                                            PlaceholderColor="#7a7a7a"
+                                            HorizontalOptions="Fill"
+                                            Text="{Binding OldEntryNumber, Mode=TwoWay}" />
 
                     <Editor Placeholder="{Binding TextTitle}"
                             FontSize="Large"
