Переведены некоторые фразы

--- a/src/gardener/Views/BlocksViews/PlaceViewCell.xaml
+++ b/src/gardener/Views/BlocksViews/PlaceViewCell.xaml
@@ -28,12 +28,12 @@
             <StackLayout IsVisible="{Binding IsStatusVisible}" HorizontalOptions="Start" Orientation="Horizontal">
                 <Label Text="{Binding Place.Status, Converter={StaticResource PlaceStatusConverter}}" />
                 <Label IsVisible="{Binding DateTime, Converter={StaticResource NullToBoolConverter}}" 
-                       Text="{Binding DateTime, StringFormat='до {0:dd.MM.yyyy HH:mm:ss}'}"/>
+                       Text="{Binding DateTime, StringFormat='{0:dd.MM.yyyy HH:mm:ss}'}"/>
             </StackLayout>
 
             <StackLayout Orientation="Horizontal" 
                              IsVisible="{Binding Time, Converter={StaticResource NullToBoolConverter}}">
-                <Label Text="Истекает через: "/>
+                <Label Text="{Binding ExpiresIn}"/>
                 <Label Text="{Binding Time}" />
             </StackLayout>
         </StackLayout>
