--- a/src/gardener/Views/BlocksViews/NewsViewCell.xaml
+++ b/src/gardener/Views/BlocksViews/NewsViewCell.xaml
@@ -1,30 +1,18 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-
 <ViewCell xmlns="http://xamarin.com/schemas/2014/forms"
           xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
           xmlns:forms="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
           x:Class="gardener.Views.BlocksViews.NewsViewCell">
     <ViewCell.View>
-        <StackLayout Orientation="Horizontal" Margin="0,5,0,5">
-            <StackLayout Margin="10,0,10,0">
-                <StackLayout VerticalOptions="CenterAndExpand" BackgroundColor="#f68b1f" Padding="1">
-                    <forms:CachedImage Aspect="AspectFill" VerticalOptions="Center"
+        <StackLayout Orientation="Horizontal" VerticalOptions="FillAndExpand" Padding="0,10">
+            <StackLayout Margin="10,0" VerticalOptions="CenterAndExpand" BackgroundColor="#f68b1f" Padding="1">
+                <forms:CachedImage Aspect="AspectFill" VerticalOptions="Center"
                                        ErrorPlaceholder="no_image"
                                        LoadingPlaceholder="no_image"
-                                       Source="{Binding ImageUrl}" WidthRequest="100" HorizontalOptions="Start"/>
-                </StackLayout>
+                                       Source="{Binding ImageUrl}" WidthRequest="100" HeightRequest="100" HorizontalOptions="Start"/>
             </StackLayout>
-            <Label Text="{Binding Title}" Margin="10, 0" FontSize="Medium" TextColor="#9e4819"
+            <Label Text="{Binding Title}" Margin="10, 5" FontSize="Medium" TextColor="#9e4819"
                        VerticalTextAlignment="Center" HorizontalTextAlignment="Start" />
         </StackLayout>
-        <!--<Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="100"/>
-                <ColumnDefinition/>
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-            </Grid.RowDefinitions>
-        </Grid>-->
     </ViewCell.View>
 </ViewCell>
