--- a/src/gardener/Views/ListView/NewsPage.xaml
+++ b/src/gardener/Views/ListView/NewsPage.xaml
@@ -1,5 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:blocksViews="clr-namespace:gardener.Views.BlocksViews"
@@ -12,8 +11,8 @@
                     <ActivityIndicator Color="#7a7a7a" VerticalOptions="Center" HorizontalOptions="Center"
                                        IsRunning="{Binding IsBusy}" />
                     <ListView ItemsSource="{Binding News}" 
-                              HasUnevenRows="True"
-                          SelectedItem="{Binding SelectedItem, Mode=TwoWay}">
+                          SelectedItem="{Binding SelectedItem, Mode=TwoWay}"
+                          HasUnevenRows="True">
                         <ListView.ItemTemplate>
                             <DataTemplate>
                                 <blocksViews:NewsViewCell />
